fixed profile pic CSS and broken emoji picker on firefox

--- a/src/main/resources/static/styles/style.css
+++ b/src/main/resources/static/styles/style.css
@@ -343,6 +343,7 @@ img.profile-pic:before {
 	background-attachment: initial;
 	background-position: center;
 	background-size: cover;
+	color: transparent;
 }
 .personbox img.profile-pic:before {
   height: 89%;
